# fastflow

./: .clang-format  .gitignore  .gitmodules  .travis.yml  AUTHORS  BUILD  BUILD.ME  CMakeLists.txt  CMakeSettings.json  Changelog.txt  FAQ.txt  FindGSL.cmake  LICENSE.MIT  README  README.md  TODO  allocator.hpp  buffer.hpp  cmake_uninstall.cmake  cmake_uninstall.cmake.in  cpp.hint  dwordcountH  farm.hpp  files-tracciati  gt.hpp  lb.hpp  node.hpp  pipeline.hpp  prova  spin-lock.hpp  squeue.hpp  svector.hpp  test_faas  testfaasraw  ubuffer.hpp  utils.hpp  version.h
examples/: CMakeLists.txt  README.examples
examples/OpenCVvideo/: Makefile  README  ffvideo.cpp  ffvideo_nf.cpp  ffvideo_nf2.cpp  ffvideo_nf3.cpp  video.cpp
examples/bowtie2-ff/: AUTHORS  CMakeLists.txt  Changelog.ff.txt  Makefile  README-and-BUILD.txt  aligner_cache.cpp  aligner_cache.h  aligner_seed.cpp  aligner_seed.h  aligner_sw_common.h  aligner_sw_driver.cpp  aligner_swsse.h  aln_sink.cpp  aln_sink.h  bowtie2  bt2_idx.h  bt2_io.cpp  bt2_search.cpp  bt2_util.cpp  ds.cpp  ds.h  ff_wrap.hpp  group_walk.h  metrics_utils.hpp  outq.cpp  pat.cpp  pat.h  pe.cpp  qual.h  read.h  sam.cpp  sstring.h  threading.h  word_io.h
examples/cholesky/: CMakeLists.txt  Makefile  blockCholesky.cpp  cholesky.cpp
examples/cwc-simulator/: AUTHORS  CMakeLists.txt  Compartment.cpp  Compartment.h  Gillespie.hpp  Instantiation.h  Match.cpp  Match.h  MatchSet.cpp  MatchSet.h  Model.cpp  Model.h  Monitor.cpp  Monitor.h  OCompartment.cpp  OCompartment.h  PCompartment.cpp  PCompartment.h  ProgressBars.hpp  README  Rule.cpp  Rule.h  Simulation.cpp  Simulation.h  Species.cpp  Species.h  SubMatch.cpp  SubMatch.h  SubMatchSet.cpp  SubMatchSet.h  definitions.h  driver.cpp  ff_accel.hpp  ff_definitions.hpp  ff_distributed.hpp  ff_nodes.hpp  ff_stat_accel.hpp  filter.cpp  filter.h  gnuplot.cpp  (+14 more)
examples/cwc-simulator-0.4-R153/: CMakeLists.txt  Compartment.cpp  Compartment.h  Driver.cpp  FlexLexer.h  Gillespie.cpp  Gillespie.h  INSTALL  Instantiation.h  Match.cpp  Match.h  MatchSet.cpp  MatchSet.h  Model.cpp  Model.h  Monitor.cpp  Monitor.h  OCompartment.cpp  OCompartment.h  PCompartment.cpp  PCompartment.h  PSpecies.cpp  PSpecies.h  ProgressBars.cpp  ProgressBars.h  Rule.cpp  Rule.h  Simulation.cpp  Simulation.h  Species.cpp  Species.h  SubMatch.cpp  SubMatch.h  SubMatchSet.cpp  SubMatchSet.h  UNLICENSE  definitions.h  ff_accel.hpp  kmeans.h  kmeans_seq.cpp  (+17 more)
examples/denoiser/: BUILD  README  TODO
examples/fibonacci/: CMakeLists.txt  Makefile  ff_fib.cpp  fib.cpp  fib_dac.cpp
examples/function_min/: CMakeLists.txt  Makefile  PerformanceTests.ods  funcmin.cpp
examples/jacobi/: Makefile  jacobi.cpp  jacobi_CUDA.cu  jacobi_stencil.cpp
examples/matmul/: CMakeLists.txt  Makefile  ff_matmul.cpp  ff_matmul_forall.cpp  ff_matmul_map.cpp  ff_matmul_v2.cpp  ff_streamMM.cpp  matmul.cpp  tbb_matmul.cpp
examples/nqueens/: CMakeLists.txt  Makefile  nq.c  nq_ff.cpp  nq_ff_acc.cpp
examples/pbzip2/: AUTHORS  CMakeLists.txt  COPYING  ChangeLog  Makefile  README  pbzip2.1  pbzip2.cpp  pbzip2.spec  pbzip2_ff.cpp
examples/qt-mandelbrot/: CMakeLists.txt
examples/quicksort/: CMakeLists.txt  Makefile  README  ff_qs.cpp  ff_qs_mpmc_bk.cpp  ff_qs_mpmc_nbk.cpp  ff_qs_opt.cpp  ff_qs_simple.cpp  qs.cpp  quicksort_dac.cpp
examples/simple_mandelbrot/: CMakeLists.txt  Makefile  mandel_ff.cpp  mandel_ff_mem_all.cpp  mandel_pt.cpp  mandel_seq.c  marX2.c  marX2.h
examples/spd-denoiser/: CMakeLists.txt  Makefile  bitmap.hpp  block.hpp  bmp_finalizer.hpp  clusters.hpp  control_structures.hpp  convergence.hpp  cuda_denoiser.hpp  driver.cpp  ff_accel.hpp  fuy.hpp  noise_detection.hpp  parameters.cpp  parameters.h  pow_table.hpp  utils.cpp  utils.h  utils.hpp
examples/swps3/: CMakeLists.txt  Doxyfile  DynProgr_PPU.c  DynProgr_PPU.h  DynProgr_PPU_profile.inc  DynProgr_SPE.h  DynProgr_SPE_functions.cc  DynProgr_SPE_functions.h  DynProgr_SPE_main.c  DynProgr_altivec.cc  DynProgr_altivec.h  DynProgr_scalar.c  DynProgr_scalar.h  DynProgr_sse_byte.c  DynProgr_sse_byte.h  DynProgr_sse_short.c  DynProgr_sse_short.h  HISTORY  LICENSE  Makefile.altivec  Makefile.cell  Makefile.macsse2  Makefile.sse2  Makefile.sse2_ff  README  dblen.c  debug.c  debug.h  fasta.c  fasta.h  fastflow.h  matrix.c  matrix.h  swps3.c  swps3.h  swps3_ff.c
tests/: 1pipe.cpp  CMakeLists.txt  Makefile  bench_masterworker.cpp  example_parfor_variants.cpp  farm_basic.cpp  latptr11.cpp  map.cpp  mytime.h  parfor_basic.cpp  perf_parfor.cpp  perf_parfor2.cpp  perf_test1.cpp  perf_test2.cpp  perf_test_alloc1.cpp  perf_test_alloc2.cpp  perf_test_alloc3.cpp  perf_test_noalloc.cpp  pipe_basic.cpp  runtests.sh  simplest.cpp  sizeof.cpp  skmap.cpp  test1.cpp  test1b.cpp  test2.cpp  test3.cpp  test3_farm.cpp  test3b.cpp  test4.cpp  test5.cpp  test6.cpp  test7.cpp  test8.cpp  test_MISD.cpp  test_acc_1  test_accelerator+pinning.cpp  test_accelerator.cpp  test_accelerator2.cpp  test_accelerator3.cpp  (+138 more)
tests/FaaS/: faas_backends.json  faas_functions.json  test_FFConvFaaS.cpp  test_FFConvFaaS2.cpp  test_FFConvFaaS2_function.cpp  test_faas.cpp  test_faas_function.cpp  test_faas_raw.cpp
tests/cuda/: CMakeLists.txt  Makefile  cudaMap.cu  cudaMapAccelerator.cu  cudaMapManaged.cu  dotProduct.cu  dotProductCUDA.cu  farm_cudaMap.cu  farm_cudaReduce.cu  farm_cudaStencil.cu  test_pool1CUDA.cu  test_pool2CUDA.cu
tests/d/: CMakeLists.txt  Makefile  README  allgather.cpp  broadcast.cpp  bw11.cpp  dmap.cpp  dmap2.cpp  farm.cpp  farm_farm.cpp  fromany.cpp  lat11.cpp  lat11_v2.cpp  ondemand.cpp  pipe_farm.cpp  pipe_farm2.cpp  scatter.cpp  test11_pipe.cpp  test11_torus.cpp  test_dinout.cpp  test_gw.cpp  test_marshal.cpp  unicast.cpp
tests/distributed/: Makefile  result  runParametricPerf.sh  test_Farm2.cpp  test_Scatter.cpp  test_Scatter.json  test_a2aOnDemand.cpp  test_a2aOnDemand.json  test_a2aOnDemand2.cpp  test_a2a_h1.cpp  test_a2a_h2.cpp  test_a2a_h3.cpp  test_a2a_h4.cpp  test_complete.cpp  test_complete.json  test_complete1.cpp  test_complete1.json  test_complete2.cpp  test_complete3.cpp  test_complete4.cpp  test_farm1.cpp  (+66 more)
(+1333 files in other folders)
