add_subdirectory( cholesky )
add_subdirectory( matmul )
add_subdirectory( fibonacci )
add_subdirectory( quicksort )
find_package( Qt4 )
if( QT4_FOUND )
add_subdirectory( qt-mandelbrot )
endif( QT4_FOUND )
if (NOT(CMAKE_SYSTEM_NAME MATCHES "Windows"))
find_package ( BZip2 )
if(BZIP2_FOUND)
  add_subdirectory( pbzip2 )
else (BZIP2_FOUND)
  message(WARNING "libbz2 not found: Skipping pbzip2 example")
endif (BZIP2_FOUND)
endif (NOT(CMAKE_SYSTEM_NAME MATCHES "Windows"))
add_subdirectory( nqueens )
find_package ( X11 )
if( X11_FOUND )
add_subdirectory( simple_mandelbrot )
endif( X11_FOUND )
 add_subdirectory( swps3 )
set(Boost_ADDITIONAL_VERSIONS "1.46.1")
set(Boost_USE_STATIC_LIBS        ON)
set(Boost_USE_MULTITHREADED      ON)
set(Boost_USE_STATIC_RUNTIME    OFF)
find_package ( Boost 1.34 COMPONENTS program_options  )
if(Boost_FOUND)
if ((CMAKE_SYSTEM_NAME MATCHES "Windows") AND (CMAKE_CL_64))
    message(WARNING "Cannot check if Boost is 64 bit, skipping examples requiring boost") 
    message(WARNING "Edit example/CMakeList.txt to force inclusion")
  else ((CMAKE_SYSTEM_NAME MATCHES "Windows") AND (CMAKE_CL_64)) 
    add_subdirectory( cwc-simulator-0.4-R153 )
  endif ((CMAKE_SYSTEM_NAME MATCHES "Windows") AND (CMAKE_CL_64))
else (Boost_FOUND)
message (WARNING " Boost not found: Skipping CWC simulator example")
endif (Boost_FOUND)
add_subdirectory( spd-denoiser )
